//
//  Constants.swift
//  Flickr
//

enum Constants {
    static let baseUrl = "https://www.flickr.com/services/rest"
    static let apiKey = "ddae8e7ab1a350317354e9bb7933bb91"
    static let photosPerPage = 30
    
    static let galleryCardSpacing = 1.0
    static let galleryGridColumns = 3
    static let galleryTextSkelentonHeight = 8.0
    static let oneLineLimit = 1
    static let descriptionLineLimit = 3
    
    static let searchBarHeight = 40.0
    static let searchBarPadding = 13.0
    
    static let delayToSearchPhotos = 800
    static let generalCornerRadius = 5.0
    static let colorOpacity = 0.5
    static let initialPage = 1
    static let zero = 0
    static let empty = ""
    static let json = "json"
    
    static let welcomeTextIdentifier = "welcomeText"
    static let searchViewIdentifier = "searchView"
    static let searchViewTextIdentifier = "searchViewText"
    static let searchViewTextFieldIdentifier = "searchViewTextField"
    static let searchViewButtonIdentifier = "searchViewButton"
    static let photosGridIdentifier = "photosGrid"
    static let photoImageViewIdentifier = "photoImage"
    
    static let detailOwnerTextIdentifier = "detailOwnerText"
    static let detailDateTextIdentifier = "detailDateText"
    static let detailDescriptionTextIdentifier = "detailDescriptionText"
    static let detailBrowserButtonIdentifier = "detailBrowserButtonText"
    static let detailImageIdentifier = "detailImage"
}
